fix: resolve JWT refresh token not stored or sent - root cause @JsonIgnore removed
Backend:
- AuthResponse.java: Remove @JsonIgnore from refreshToken so it is
  included in the JSON response body on login, Google login, and
  registration. This was the root cause - frontend received undefined
  and could never store or use the refresh token.
- AuthController.java: Logout now accepts refreshToken from request
  body as fallback alongside the HttpOnly cookie. Cookie maxAge
  updated from 7 to 30 days to match new refresh token expiry.
- CorsConfig.java: Replace wildcard allowedHeaders with explicit list;
  add Set-Cookie to exposedHeaders for cross-origin cookie handling.
- TokenBlacklistService.java: Update default TTL from 7 to 30 days.
- application.properties: Access token 30m -> 15m; refresh token
  7 days -> 30 days for production-grade e-commerce UX.

Frontend:
- axiosInstance.ts: Add withCredentials: true to both axios instances
  so the browser sends the HttpOnly refreshToken cookie on cross-origin
  requests. Fix missing-refreshToken path to attempt cookie-based
  refresh instead of immediately logging out. Handle rotated refresh
  tokens in the refresh response.
- AuthContext.tsx: Add console.error guards in login() and
  loginWithGoogle() to immediately surface missing refreshToken in
  DevTools. Normalize userData.id to string.
- authService.ts: Logout sends refreshToken in request body alongside
  the cookie to ensure it is always blacklisted.